<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mamunsyuhada.bukalapak_kw.MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/layout_review_barang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageview_barang"
                android:layout_marginStart="10dp"
                android:src="@drawable/laptop_amd_a8"
                android:layout_width="150dp"
                android:layout_height="150dp" />
            <TextView
                android:id="@+id/tv_barang"
                android:text="@string/barang_review"
                android:layout_marginStart="10dp"
                android:textSize="8pt"
                android:textStyle="bold"
                android:layout_marginEnd="4dp"
                android:layout_toEndOf="@id/imageview_barang"
                android:layout_marginTop="35dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_hargabarang"
                android:layout_below="@id/imageview_barang"
                android:text="@string/value_harga"
                android:layout_marginStart="30dp"
                android:textSize="14pt"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layout_tambah_barang"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <view
                android:backgroundTint="@color/colorPrimary"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_width="150dp"
                android:layout_height="2dp"/>
            <view
                android:backgroundTint="@color/colorPrimary"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_width="150dp"
                android:layout_height="2dp"/>
            <Button
                android:background="@color/colorPrimary"
                android:text="+"
                android:textAlignment="gravity"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorPutih"
                android:textSize="20pt"
                android:id="@+id/btn_tambah"
                android:layout_marginStart="90dp"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
            <Button
                android:text="-"
                android:textColor="@color/colorPutih"
                android:textSize="20pt"
                android:textAlignment="center"
                android:background="@color/colorPrimary"
                android:id="@+id/btn_kurang"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="90dp"
                android:layout_width="50dp"
                android:layout_height="50dp" />
            <TextView
                android:id="@+id/tv_JumlahBarang"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="99"
                android:textColor="@color/colorAccent"
                android:textSize="10pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_hargatotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/tv_harga_label"
                android:text="@string/harga"
                android:textSize="12pt"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <view
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_toStartOf="@id/tv_harga_label"
                android:layout_centerVertical="true"
                android:backgroundTint="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>
            <view
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@id/tv_harga_label"
                android:layout_centerVertical="true"
                android:backgroundTint="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_total"
                android:text="Total :"
                android:textSize="12pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="12pt"
                android:id="@+id/tv_total_value"
                android:layout_toEndOf="@id/tv_total"
                android:text="100000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <Button
            android:id="@+id/orderUy"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorAccent"
            android:textSize="12pt"
            android:text="@string/btn_order"
            android:background="@color/colorPrimary"
            android:layout_gravity="center"
            android:layout_width="350dp"
            android:layout_height="wrap_content" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/spech_barang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
